@@ -9,9 +9,9 @@
 package org.eclipse.set.feature.table.pt1.ssla;
 
 import static org.eclipse.nebula.widgets.nattable.sort.SortDirectionEnum.ASC;
+import static org.eclipse.set.feature.table.pt1.ssla.SslaColumns.*;
 import static org.eclipse.set.utils.table.sorting.ComparatorBuilder.CellComparatorType.LEXICOGRAPHICAL;
 
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 
@@ -85,7 +85,8 @@ public final class SslaTransformationService
 
 	@Override
 	protected List<String> getTopologicalColumnPosition() {
-		return Collections.emptyList();
+		return List.of(Bezeichnung, Fahrweg_Start, Fahrweg_Ziel,
+				Durchrutschweg_Ziel, Unterwegssignal);
 	}
 
 }
